--- a/css/style.css
+++ b/css/style.css
@@ -45,35 +45,43 @@ table {
 }
 
 table td, table th {
-    border-bottom: 2px solid #ddd;
+    color: #444444;
+    /* border-bottom: 2px solid #f5f5f5; */
     padding: 10px;
 }
 
 table tr:nth-child(odd) {
+    border-bottom: 2px solid #ffffff;
     background-color: #ffffff;
 }
 
 table tr:nth-child(even) {
-    background-color: #ffffff;
+    border-bottom: 2px solid #f5f5f5;
+    background-color: #f5f5f5;
 }
 
 table tr:hover {
+    border-bottom: 2px solid #ddd;
     background-color: #ddd;
 }
 
 #tr_vit {
+    border-bottom: 2px solid #f6ca33;
     background-color: #f6ca33;
 }
 
 #tr_vit:hover {
+    border-bottom: 2px solid #FAE499;
     background-color: #FAE499;
 }
 
 #tr_fr {
+    border-bottom: 2px solid #c3e8f5;
     background-color: #c3e8f5;
 }
 
 #tr_fr:hover {
+    border-bottom: 2px solid #88d1eb;
     background-color: #88d1eb;
 }
 
